# Letter-Demon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  RELEASE_NOTES.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  exceptions.txt  main.py  main.pyw  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  trap_endings.txt
!test/: dictionaryscrub.py  ignore.txt  words.txt
!test/new casual trap list/: trap_endings.txt
cache/: cache_2e36fe1d37.hash  cache_2e36fe1d37.txt  cache_3080ca16b9.hash  cache_3080ca16b9.txt  cache_bb19505c39.hash
config/: __init__.py  exceptions.py  settings.py  trap_endings.py
core/: __init__.py  dictionary.py  session.py  word_engine.py
data/: exceptions.txt  trap_endings.txt
docs/: ARCHITECTURE.md  MIGRATION_QT.md  TESTING.md  UI_REFACTOR.md
old pro trap endings/: trap_endings.txt
scripts/: release.py
system/: __init__.py  roblox.py  typer.py
system/typer backup/: typer.py
tests/: conftest.py  test_config.py  test_dictionary.py  test_integration.py  test_modes.py  test_roblox.py  test_typer.py  test_word_engine.py
ui/: __init__.py  app.py  dialogs.py  file_editors.py  main_layout.py  main_widget.py  main_window.py  modes.py  theme.py  view.py  widgets.py  window_utils.py  workers.py
ui/backups/: app.py  widgets.py
validator/: .dict_settings.json  dict_validator.pyw
