[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "letter-demon"
version = "8.0.0"
description = "Windows desktop typing assistant for a Roblox word game"
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
]

[project.urls]
Repository = "https://github.com/n6ufal/Letter-Demon"
