[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "letter-demon"
version = "9.0.0"
description = "Windows desktop typing assistant for a Roblox word game"
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
]

[project.urls]
Repository = "https://github.com/n6ufal/Letter-Demon"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "E4"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
